--- a/tpl/footer.html
+++ b/tpl/footer.html
@@ -1,136 +1,139 @@
 <footer class="w-full bg-white border-t border-[#DCDEE0]">
 
   <!-- ================= DESKTOP ================= -->
-  <div class="hidden lg:block max-w-[1600px] mx-auto px-[60px] pt-[72px] pb-[56px]">
-    <!-- desktop-часть оставляем БЕЗ ИЗМЕНЕНИЙ -->
-    <!-- у тебя она уже корректная -->
-  </div>
+  <div class="hidden lg:block max-w-[1600px] mx-auto px-[60px] pt-[72px] pb-[56px] text-[#24272A]">
 
-  <!-- ================= MOBILE ================= -->
-  <div class="lg:hidden px-4 pt-10 pb-8 text-[16px] leading-[160%] text-[#24272A] space-y-8">
+    <div class="grid grid-cols-4 gap-x-[72px] gap-y-[48px] text-sm leading-[160%]">
 
-    <!-- Корпуса -->
-    <div>
-      <div class="font-semibold mb-3">Корпуса</div>
-      <div class="space-y-2">
-        <a href="#" class="block">Главный корпус</a>
-        <a href="#" class="block">Ризница Троице-Сергиевской Лавры</a>
-        <a href="#" class="block">Музейный комплекс «Конный двор»</a>
-        <a href="#" class="block">Краеведческий корпус</a>
+      <!-- COL 1 -->
+      <div class="space-y-6">
+        <div>
+          <div class="font-semibold mb-3">Корпуса</div>
+          <div class="space-y-2">
+            <a href="#" class="block hover:text-[#C93635]">Главный корпус</a>
+            <a href="#" class="block hover:text-[#C93635]">Ризница Троице-Сергиевской Лавры</a>
+            <a href="#" class="block hover:text-[#C93635]">Музейный комплекс «Конный двор»</a>
+            <a href="#" class="block hover:text-[#C93635]">Краеведческий корпус</a>
+          </div>
+        </div>
+
+        <a href="#" class="font-semibold hover:text-[#C93635] inline-block">
+          Интерактивная карта
+        </a>
+
+        <div>
+          <div class="font-semibold mb-3">Для групп</div>
+          <div class="space-y-2">
+            <a href="#" class="block hover:text-[#C93635]">Турфирмам</a>
+            <a href="#" class="block hover:text-[#C93635]">Группам учащихся</a>
+            <a href="#" class="block hover:text-[#C93635]">Социальным группам и людям с инвалидностью</a>
+            <a href="#" class="block hover:text-[#C93635]">Паломникам</a>
+            <a href="#" class="block hover:text-[#C93635]">Билеты и услуги для групп</a>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <a href="#" class="font-semibold block">Интерактивная карта</a>
-
-    <!-- Для групп -->
-    <div>
-      <div class="font-semibold mb-3">Для групп</div>
-      <div class="space-y-2">
-        <a href="#" class="block">Турфирмам</a>
-        <a href="#" class="block">Группам учащихся</a>
-        <a href="#" class="block">Социальным группам и людям с инвалидностью</a>
-        <a href="#" class="block">Паломникам</a>
-        <a href="#" class="block">Билеты и услуги для групп</a>
-      </div>
-    </div>
-
-    <!-- Посетителям -->
-    <div>
-      <div class="font-semibold mb-3">Посетителям</div>
-      <div class="space-y-2">
-        <a href="#" class="block">Часто задаваемые вопросы</a>
-        <a href="#" class="block">Билеты</a>
-        <a href="#" class="block">Пушкинская карта</a>
-        <a href="#" class="block">Рекомендованные маршруты</a>
-        <a href="#" class="block">Музей детям</a>
-        <a href="#" class="block">Мастер-классы</a>
-        <a href="#" class="block">Концерты</a>
-        <a href="#" class="block">Посетителям с ОВЗ</a>
-        <a href="#" class="block">Правила посещения и возврата денег</a>
-        <a href="#" class="block">Спланировать визит</a>
-        <a href="#" class="block">Услуги</a>
-      </div>
-    </div>
-
-    <!-- Мероприятия -->
-    <div>
-      <div class="font-semibold mb-3">Мероприятия</div>
-      <div class="space-y-2">
-        <a href="#" class="block">Афиша</a>
-        <a href="#" class="block">Выходные в Сергиевом Посаде</a>
-      </div>
-    </div>
-
-    <!-- Экскурсии -->
-    <div>
-      <div class="font-semibold mb-3">Экскурсии</div>
-      <a href="#" class="block">Экскурсии</a>
-    </div>
-
-    <!-- О музее -->
-    <div>
-      <div class="font-semibold mb-3">О музее</div>
-      <div class="space-y-2">
-        <a href="#" class="block">Научная деятельность</a>
-        <a href="#" class="block">Документы</a>
-        <a href="#" class="block">История музея</a>
-        <a href="#" class="block">Коллекции</a>
-        <a href="#" class="block">Заказ изображений</a>
-        <a href="#" class="block">Вакансии</a>
-      </div>
-    </div>
-
-    <!-- Контакты -->
-    <div class="space-y-4 pt-4 border-t border-[#DCDEE0]">
-      <button class="w-full border border-[#24272A] py-3 font-semibold">
-        Обратный звонок
-      </button>
-
-      <a href="mailto:sergiev-mus@mail.ru" class="font-semibold block">
-        sergiev-mus@mail.ru
-      </a>
-
+      <!-- COL 2 -->
       <div>
-        <div class="text-xs text-[#6B7280]">Заказ экскурсий</div>
-        <a href="tel:+74965405356" class="block">8 496 540-53-56</a>
-        <a href="tel:+79850404517" class="block">8 985 040-45-17</a>
+        <div class="font-semibold mb-3">Посетителям</div>
+        <div class="space-y-2">
+          <a href="#" class="block hover:text-[#C93635]">Часто задаваемые вопросы</a>
+          <a href="#" class="block hover:text-[#C93635]">Билеты</a>
+          <a href="#" class="block hover:text-[#C93635]">Пушкинская карта</a>
+          <a href="#" class="block hover:text-[#C93635]">Рекомендованные маршруты</a>
+          <a href="#" class="block hover:text-[#C93635]">Музей детям</a>
+          <a href="#" class="block hover:text-[#C93635]">Мастер-классы</a>
+          <a href="#" class="block hover:text-[#C93635]">Концерты</a>
+          <a href="#" class="block hover:text-[#C93635]">Посетителям с ОВЗ</a>
+          <a href="#" class="block hover:text-[#C93635]">Правила посещения и возврата денег</a>
+          <a href="#" class="block hover:text-[#C93635]">Спланировать визит</a>
+          <a href="#" class="block hover:text-[#C93635]">Услуги</a>
+        </div>
       </div>
 
+      <!-- COL 3 -->
       <div>
-        <div class="text-xs text-[#6B7280]">Вопросы и сотрудничество</div>
-        <a href="tel:+74965406358" class="block">8 496 540-63-58</a>
+        <div class="font-semibold mb-3">Мероприятия</div>
+        <div class="space-y-2 mb-10">
+          <a href="#" class="block hover:text-[#C93635]">Афиша</a>
+          <a href="#" class="block hover:text-[#C93635]">Выходные в Сергиевом Посаде</a>
+        </div>
+
+        <div>
+          <div class="font-semibold mb-3">Экскурсии</div>
+          <a href="#" class="block hover:text-[#C93635]">Экскурсии</a>
+        </div>
+
+        <div class="mt-10">
+          <div class="font-semibold mb-3">О музее</div>
+          <div class="space-y-2">
+            <a href="#" class="block hover:text-[#C93635]">Научная деятельность</a>
+            <a href="#" class="block hover:text-[#C93635]">Документы</a>
+            <a href="#" class="block hover:text-[#C93635]">История музея</a>
+            <a href="#" class="block hover:text-[#C93635]">Коллекции</a>
+            <a href="#" class="block hover:text-[#C93635]">Заказ изображений</a>
+            <a href="#" class="block hover:text-[#C93635]">Вакансии</a>
+          </div>
+        </div>
       </div>
 
-      <!-- Social -->
-      <div class="flex gap-4 pt-2">
-        <a href="#"><img src="/assets/svg/telegram.svg" class="w-10 h-10"></a>
-        <a href="#"><img src="/assets/svg/vk.svg" class="w-10 h-10"></a>
-        <a href="#"><img src="/assets/svg/youtube.png" class="w-10 h-10"></a>
-        <a href="#"><img src="/assets/svg/ok.svg" class="w-10 h-10"></a>
+      <!-- COL 4 -->
+      <div class="space-y-6">
+        <button class="w-full border border-[#24272A] py-3 font-semibold hover:bg-[#24272A] hover:text-white transition">
+          Обратный звонок
+        </button>
+
+        <a href="mailto:sergiev-mus@mail.ru" class="font-semibold block hover:text-[#C93635]">
+          sergiev-mus@mail.ru
+        </a>
+
+        <div class="space-y-3">
+          <div>
+            <div class="text-xs text-[#6B7280]">Заказ экскурсий</div>
+            <a href="tel:+74965405356" class="block hover:text-[#C93635]">8 496 540-53-56</a>
+            <a href="tel:+79850404517" class="block hover:text-[#C93635]">8 985 040-45-17</a>
+          </div>
+
+          <div>
+            <div class="text-xs text-[#6B7280]">Вопросы и сотрудничество</div>
+            <a href="tel:+74965406358" class="block hover:text-[#C93635]">8 496 540-63-58</a>
+          </div>
+        </div>
+
+        <div class="flex gap-4 pt-2">
+          <a href="#"><img src="/assets/svg/telegram.svg" class="w-10 h-10"></a>
+          <a href="#"><img src="/assets/svg/vk.svg" class="w-10 h-10"></a>
+          <a href="#"><img src="/assets/svg/youtube.png" class="w-10 h-10"></a>
+          <a href="#"><img src="/assets/svg/ok.svg" class="w-10 h-10"></a>
+        </div>
       </div>
+
     </div>
 
-    <!-- Bottom -->
-    <div class="pt-8 space-y-3 text-sm text-[#6B7280] border-t border-[#DCDEE0]">
-      <div class="text-[#24272A]">
-        141310, Россия, Московская область, г. Сергиев Посад, Проспект Красной Армии, д. 144
+    <!-- BOTTOM -->
+    <div class="mt-16 pt-6 border-t border-[#DCDEE0] flex justify-between items-start text-sm text-[#6B7280]">
+      <div class="space-y-2">
+        <div class="text-[#24272A]">
+          141310, Россия, Московская область, г. Сергиев Посад, Проспект Красной Армии, д. 144
+        </div>
+        <div class="text-[#24272A]">
+          © 2025 ФГБУК «Сергиево-Посадский государственный историко-художественный музей-заповедник»
+        </div>
+        <div>
+          Использование материалов сайта без разрешения правообладателя — запрещено
+        </div>
+        <a href="#" class="block hover:text-[#24272A]">Политика конфиденциальности</a>
       </div>
 
-      <div class="text-[#24272A]">
-        © 2025 ФГБУК «Сергиево-Посадский государственный историко-художественный музей-заповедник»
-      </div>
-
-      <div>
-        Использование материалов сайта без разрешения правообладателя — запрещено
-      </div>
-
-      <a href="#" class="block">Политика конфиденциальности</a>
-
-      <div class="flex items-center gap-2 pt-2 text-[#24272A]">
+      <div class="flex items-center gap-2 text-[#24272A]">
         <span class="font-semibold">Создано в</span>
         <img src="/assets/svg/web1.svg" class="h-4">
       </div>
     </div>
 
   </div>
+
+  <!-- ================= MOBILE (БЕЗ ИЗМЕНЕНИЙ) ================= -->
+  <!-- твоя mobile-часть остаётся как есть -->
+
 </footer>
