--- a/tpl/header.html
+++ b/tpl/header.html
@@ -56,7 +56,7 @@
             >
                 Купить билет
                 <img
-                    src="/assets/svg/ticket.svg"
+                    src="/assets/svg/ticket2.svg"
                     class="w-5 h-5 transition group-hover:invert"
                     alt=""
                 >
