--- a/tpl/pushkin-card.html
+++ b/tpl/pushkin-card.html
@@ -40,6 +40,7 @@
         5000 рублей.
       </p>
 
+      <!-- КНОПКА НА ШИРИНУ ТЕКСТОВОГО БЛОКА -->
       <a
         href="#"
         class="inline-flex items-center justify-center gap-3
@@ -48,7 +49,7 @@
                text-[#24272A] text-[16px] font-semibold
                hover:bg-[#24272A] hover:text-white
                transition
-               w-full sm:w-fit"
+               w-full"
       >
         Подробнее
         <span class="text-lg">→</span>
