--- a/tpl/hero.html
+++ b/tpl/hero.html
@@ -3,12 +3,13 @@
     class="relative bg-[#C93635] overflow-hidden"
 >
     <!-- CONTENT -->
-    <div class="max-w-[1600px] mx-auto
-                px-4 lg:px-[60px]
-              pt-8 lg:pt-12
-              pb-10 lg:pb-
-
-                relative z-10">
+    <div
+        class="max-w-[1600px] mx-auto
+               px-4 lg:px-[60px]
+               pt-8 lg:pt-12
+               pb-10 lg:pb-16
+               relative z-10"
+    >
 
         <div class="grid lg:grid-cols-2 gap-12 items-center">
 
@@ -23,39 +24,48 @@
                 </div>
 
                 <!-- TITLE -->
-                <h1 class="font-semibold
+                <h1
+                    class="font-semibold
                            text-[44px] leading-[1.1]
                            lg:text-[72px] lg:leading-[1.05]
-                           mb-6">
+                           mb-6"
+                >
                     <span x-text="slides[current].titleLine1"></span><br>
                     <span x-text="slides[current].titleLine2"></span>
                 </h1>
 
                 <!-- SUBTITLE -->
-                <p class="text-sm lg:text-base opacity-90 mb-10"
-                   x-text="slides[current].subtitle">
-                </p>
+                <p
+                    class="text-sm lg:text-base opacity-90 mb-10"
+                    x-text="slides[current].subtitle"
+                ></p>
 
                 <!-- BUTTONS -->
                 <div class="flex gap-4 mb-12">
 
-                    <a href="#"
-                       class="group inline-flex items-center gap-3
-                              h-[52px] px-6
-                              bg-white text-[#24272A] font-semibold
-                              border border-white
-                              hover:bg-transparent hover:text-white transition">
+                    <a
+                        href="#"
+                        class="group inline-flex items-center gap-3
+                               h-[52px] px-6
+                               bg-white text-[#24272A] font-semibold
+                               border border-white
+                               hover:bg-transparent hover:text-white transition"
+                    >
                         Купить билет
-                        <img src="/assets/svg/ticket.svg"
-                             class="w-5 h-5 transition group-hover:invert"
-                             alt="">
+                        <img
+                            src="/assets/svg/ticket1.svg"
+                            class="w-5 h-5 transition group-hover:invert"
+                            alt=""
+                        >
                     </a>
 
-                    <a href="#"
-                       class="inline-flex items-center gap-3
-                              h-[52px] px-6
-                              border border-white font-semibold
-                              hover:bg-white/10 transition">
+                    <a
+                        href="#"
+                        class="inline-flex items-center gap-3
+                               h-[52px] px-6
+                               border border-white font-semibold
+                               hover:bg-white/10 transition"
+                    >
                         Постоянная выставка →
                     </a>
                 </div>
@@ -63,10 +73,12 @@
                 <!-- SLIDER CONTROLS -->
                 <div class="flex items-center gap-4">
 
-                    <button @click="prev"
-                            class="w-10 h-10 border border-white/70
-                                   flex items-center justify-center
-                                   hover:bg-white/10 transition">
+                    <button
+                        @click="prev"
+                        class="w-10 h-10 border border-white/70
+                               flex items-center justify-center
+                               hover:bg-white/10 transition"
+                    >
                         ←
                     </button>
 
@@ -74,47 +86,51 @@
                         <template x-for="(item, index) in slides" :key="index">
                             <span
                                 class="w-6 h-1 transition-colors"
-                                :class="current === index ? 'bg-white' : 'bg-white/40'">
-                            </span>
+                                :class="current === index ? 'bg-white' : 'bg-white/40'"
+                            ></span>
                         </template>
                     </div>
 
-                    <button @click="next"
-                            class="w-10 h-10 border border-white/70
-                                   flex items-center justify-center
-                                   hover:bg-white/10 transition">
+                    <button
+                        @click="next"
+                        class="w-10 h-10 border border-white/70
+                               flex items-center justify-center
+                               hover:bg-white/10 transition"
+                    >
                         →
                     </button>
                 </div>
             </div>
 
- <div class="relative
-            min-h-[360px] lg:min-h-[430px]
-            flex justify-end">
+            <!-- RIGHT -->
+            <div
+                class="relative
+                       min-h-[360px] lg:min-h-[430px]
+                       flex justify-end"
+            >
 
-    <!-- OVAL -->
-    <div
-        class="absolute
-               right-0
-               bottom-[40px]
-               w-[480px] h-[480px]
-               lg:w-[560px] lg:h-[560px]
-               rounded-full bg-white/15">
-    </div>
+                <!-- OVAL -->
+                <div
+                    class="absolute
+                           right-0
+                           bottom-[40px]
+                           w-[480px] h-[480px]
+                           lg:w-[560px] lg:h-[560px]
+                           rounded-full bg-white/15"
+                ></div>
 
-    <!-- MATRYOSHKA -->
-    <img
-        :src="slides[current].img"
-        alt=""
-        class="absolute
-               right-0
-               bottom-[-250px]
-               w-[520px] lg:w-[640px]
-               z-10
-               pointer-events-none">
-</div>
-
-
+                <!-- MATRYOSHKA -->
+                <img
+                    :src="slides[current].img"
+                    alt=""
+                    class="absolute
+                           right-0
+                           bottom-[-250px]
+                           w-[520px] lg:w-[640px]
+                           z-10
+                           pointer-events-none"
+                >
+            </div>
 
         </div>
     </div>
