--- a/tpl/subscribe.html
+++ b/tpl/subscribe.html
@@ -1,38 +1,87 @@
 <section class="w-full bg-[#7474C2] relative overflow-hidden">
-  <!-- декоративный фон -->
-  <div class="absolute inset-0 pointer-events-none">
-    <div class="absolute left-1/3 top-0 w-[600px] h-[600px] bg-white/10 rounded-[80px]"></div>
-    <div class="absolute left-1/2 bottom-0 w-[600px] h-[600px] bg-white/10 rounded-[80px]"></div>
+
+  <!-- ПАТТЕРН / ВОДЯНОЙ ЗНАК -->
+  <div
+    aria-hidden="true"
+    class="pointer-events-none absolute
+           left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2
+           w-[720px] h-[720px]
+           opacity-20
+           hidden lg:block"
+  >
+    <img
+      src="/assets/img/museum-mark.png"
+      alt=""
+      class="w-full h-full object-contain"
+    >
   </div>
 
+  <!-- MOBILE PATTERN -->
   <div
-    class="relative max-w-[1600px] mx-auto px-[60px] py-[80px]
-           flex items-center justify-between gap-[80px]
-           lg:flex-row flex-col lg:items-center items-start">
+    aria-hidden="true"
+    class="pointer-events-none absolute
+           right-0 top-0
+           w-[180px] h-[180px]
+           opacity-20
+           lg:hidden"
+  >
+    <img
+      src="/assets/img/museum-mark.png"
+      alt=""
+      class="w-full h-full object-contain"
+    >
+  </div>
 
-    <!-- левая колонка -->
-    <h2
-      class="text-white font-[Racama] text-[72px] leading-[95%] tracking-[-0.02em]
-             lg:max-w-[420px]">
-      Рассылка<br>от музея
-    </h2>
+  <!-- CONTENT -->
+  <div
+    class="relative z-10
+           max-w-[1600px] mx-auto
+           px-4 sm:px-6 lg:px-[60px]
+           py-12 sm:py-16 lg:py-[80px]">
 
-    <!-- правая колонка -->
-    <div class="flex flex-col gap-5 w-full max-w-[360px]">
-      <input
-        type="email"
-        placeholder="Ваш email"
-        class="w-full px-6 py-5 text-white placeholder-white/70
-               bg-white/20 border border-white/20
-               focus:outline-none focus:bg-white/30 transition" />
+    <div class="flex flex-col lg:flex-row
+                items-start lg:items-center
+                justify-between gap-10 lg:gap-[80px]">
 
-      <button
-        class="w-full px-6 py-5 bg-white text-[#7474C2]
-               font-semibold text-[16px]
-               hover:bg-white/90 transition">
-        Подписаться на рассылку
-      </button>
+      <!-- LEFT -->
+      <h2
+        class="font-[Racama] font-normal
+               text-white
+               text-[40px] sm:text-[56px] lg:text-[72px]
+               leading-[0.95]
+               tracking-[-0.02em]
+               max-w-[420px]"
+      >
+        Рассылка<br>от музея
+      </h2>
+
+      <!-- RIGHT -->
+      <div class="w-full max-w-[360px] flex flex-col gap-4">
+        <input
+          type="email"
+          placeholder="Ваш email"
+          class="w-full
+                 px-6 py-5
+                 text-white placeholder-white/70
+                 bg-white/20
+                 border border-white/20
+                 focus:outline-none
+                 focus:bg-white/30
+                 transition"
+        >
+
+        <button
+          class="w-full
+                 px-6 py-5
+                 bg-white text-[#7474C2]
+                 font-semibold text-base
+                 transition
+                 hover:bg-white/90"
+        >
+          Подписаться на рассылку
+        </button>
+      </div>
+
     </div>
-
   </div>
 </section>
